# Columnar_Database

./: .gitignore  CMakeLists.txt
build-clickbench/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
build-clickbench/clickbench/: Makefile  clickbench  cmake_install.cmake
build-clickbench/src/: Makefile  cmake_install.cmake
build-clickbench/src/CsvMfReader/: Makefile  cmake_install.cmake
build-clickbench/src/CsvMfWriter/: Makefile  cmake_install.cmake
build-clickbench/src/Tests/: Makefile  cmake_install.cmake
build-clickbench/src/engine/: Makefile  cmake_install.cmake
build-clickbench/src/queries_executor/: Makefile  cmake_install.cmake
build-o3-native/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
build-o3-native/clickbench/: Makefile  cmake_install.cmake
build-o3-native/src/: Makefile  cmake_install.cmake
build-o3-native/src/CsvMfReader/: Makefile  cmake_install.cmake
build-o3-native/src/CsvMfWriter/: Makefile  cmake_install.cmake
build-o3-native/src/Tests/: Makefile  cmake_install.cmake  test_batch_serialization  test_reader  test_writer
build-o3-native/src/engine/: Makefile  engine  (+1 more)
clickbench/: CMakeLists.txt  clickbench.cpp
cmake/: dependencies_package.cmake
script/: build.sh  convert.sh  run_query.sh  setup.sh
src/: CMakeLists.txt  CmakeLists.txt  utils.h
src/CSV_reader/: reader.cpp  reader.h
src/CSV_writer/: writer.cpp  writer.h
src/CsvMfReader/: CMakeLists.txt  reader.cpp  reader.h
src/CsvMfWriter/: CMakeLists.txt  writer.cpp  writer.h
src/TestFiles/: output.csv  output.mf  result10.csv  result11.csv  result17.csv  result18.csv  result2.csv  result21.csv  result22.csv  result23.csv  result24.csv  result30.csv  result31.csv  result32.csv  result35.csv  result38.csv  result39.csv  result40.csv  result41.csv  result42.csv
src/Tests/: CMakeLists.txt  TestBatchSerialization.cpp  TestRead.cpp  TestReader.cpp  TestScanExecutor.cpp  TestWriter.cpp
src/engine/: CMakeLists.txt  a.cpp  batch.cpp  batch.h  column.cpp  column.h  data_storage.cpp  data_storage.h  engine.cpp  engine.h  main.cpp  schema.cpp  schema.h
src/engine/data_storage/: batch.cpp  batch.h  column.cpp  column.h  schema.cpp  schema.h
src/engine/data_storage/visitors/: date_visitor.h  numeric_visitor.h  sort_visitor.h  sum_visitor.h  visitor.h
src/engine/serialization/: batch_serialization.cpp  batch_serialization.h
src/queries_executor/: CMakeLists.txt  aggregation.cpp  aggregation.h  executor.cpp  executor.h  helpers.h  objects.h  operator.cpp  operator.h  transform.cpp  transform.h
(+2 files in other folders)
